[gd_scene load_steps=9 format=3 uid="uid://r4tdy5pltse1"]

[ext_resource type="FontFile" uid="uid://ysnlin44jdcx" path="res://assets/fonts/SourceSansPro-Black.ttf" id="1_grnc8"]
[ext_resource type="Script" path="res://Scripts/inGameMenu.gd" id="1_gy2xu"]
[ext_resource type="Texture2D" uid="uid://ck08lpcd2vua1" path="res://assets/sprites/HUD/letreiro.png" id="1_ja87f"]
[ext_resource type="PackedScene" uid="uid://eji6otfwihjh" path="res://Scene/MainMenu/OptionsMenu.tscn" id="4_j2q1t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a3esg"]
texture = ExtResource("1_ja87f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wja3v"]
texture = ExtResource("1_ja87f")
modulate_color = Color(0.658824, 0.658824, 0.658824, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jaxdu"]
texture = ExtResource("1_ja87f")
modulate_color = Color(0.364706, 0.364706, 0.364706, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mk2ao"]
texture = ExtResource("1_ja87f")
modulate_color = Color(0.537255, 0.537255, 0.537255, 1)

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gy2xu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 0.411765)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(275, 330)
layout_mode = 2
color = Color(0.278431, 0.156863, 0.0509804, 1)

[node name="Label" type="Label" parent="CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_right = 65.5
offset_bottom = 65.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_grnc8")
theme_override_font_sizes/font_size = 48
text = "Pausa"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -102.0
offset_right = 110.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(220, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_a3esg")
theme_override_styles/hover = SubResource("StyleBoxTexture_wja3v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jaxdu")
theme_override_styles/focus = SubResource("StyleBoxTexture_mk2ao")
text = "Resumir"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(220, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_a3esg")
theme_override_styles/hover = SubResource("StyleBoxTexture_wja3v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jaxdu")
theme_override_styles/focus = SubResource("StyleBoxTexture_mk2ao")
text = "Opções"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/CenterContainer3"]
custom_minimum_size = Vector2(220, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_a3esg")
theme_override_styles/hover = SubResource("StyleBoxTexture_wja3v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jaxdu")
theme_override_styles/focus = SubResource("StyleBoxTexture_mk2ao")
text = "Menu Principal"

[node name="OptionsMenu" parent="." instance=ExtResource("4_j2q1t")]
visible = false
layout_mode = 2

[connection signal="gui_input" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer/Resume" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer/Resume" to="." method="_on_combine_button_mouse_entered" binds= [0]]
[connection signal="mouse_exited" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer/Resume" to="." method="_on_combine_button_mouse_exited"]
[connection signal="gui_input" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer2/Options" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer2/Options" to="." method="_on_combine_button_mouse_entered" binds= [1]]
[connection signal="mouse_exited" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer2/Options" to="." method="_on_combine_button_mouse_exited"]
[connection signal="gui_input" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer3/MainMenu" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer3/MainMenu" to="." method="_on_combine_button_mouse_entered" binds= [2]]
[connection signal="mouse_exited" from="CenterContainer/ColorRect/VBoxContainer/CenterContainer3/MainMenu" to="." method="_on_combine_button_mouse_exited"]
